; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_resource_tracker.c_alloc_eq_tr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_resource_tracker.c_alloc_eq_tr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.res_common = type { i32, i32 }
%struct.res_eq = type { %struct.res_common }

@GFP_KERNEL = common dso_local global i32 0, align 4
@RES_EQ_RESERVED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.res_common* (i32)* @alloc_eq_tr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.res_common* @alloc_eq_tr(i32 %0) #0 {
  %2 = alloca %struct.res_common*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.res_eq*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.res_eq* @kzalloc(i32 8, i32 %5)
  store %struct.res_eq* %6, %struct.res_eq** %4, align 8
  %7 = load %struct.res_eq*, %struct.res_eq** %4, align 8
  %8 = icmp ne %struct.res_eq* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.res_common* null, %struct.res_common** %2, align 8
  br label %21

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.res_eq*, %struct.res_eq** %4, align 8
  %13 = getelementptr inbounds %struct.res_eq, %struct.res_eq* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.res_common, %struct.res_common* %13, i32 0, i32 0
  store i32 %11, i32* %14, align 4
  %15 = load i32, i32* @RES_EQ_RESERVED, align 4
  %16 = load %struct.res_eq*, %struct.res_eq** %4, align 8
  %17 = getelementptr inbounds %struct.res_eq, %struct.res_eq* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.res_common, %struct.res_common* %17, i32 0, i32 1
  store i32 %15, i32* %18, align 4
  %19 = load %struct.res_eq*, %struct.res_eq** %4, align 8
  %20 = getelementptr inbounds %struct.res_eq, %struct.res_eq* %19, i32 0, i32 0
  store %struct.res_common* %20, %struct.res_common** %2, align 8
  br label %21

21:                                               ; preds = %10, %9
  %22 = load %struct.res_common*, %struct.res_common** %2, align 8
  ret %struct.res_common* %22
}

declare dso_local %struct.res_eq* @kzalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
